# rectiou

./: .coveragerc  README.md  pyproject.toml  pytest.ini  rectiou.py
.github/workflows/: main.yml
examples/: demo.py  minimal_example.py
rectiou/: __init__.py  rectiou.py
tests/rectiou/: test_rectiou.py
